--- a/simulation/CMakeLists.txt
+++ b/simulation/CMakeLists.txt
@@ -99,6 +99,14 @@ verilate(verilated_uart_regs COVERAGE TRACE
   VERILATOR_ARGS -Wall -Wno-fatal -DSIMULATION
 )
 
+# UART Top-Level (complete integration)
+add_library(verilated_uart_top STATIC)
+verilate(verilated_uart_top COVERAGE TRACE
+  PREFIX Vuart_top
+  SOURCES ${RTL_ROOT}/uart_top.sv ${RTL_ROOT}/uart_regs.sv ${RTL_ROOT}/baud_gen.sv ${RTL_ROOT}/uart_tx_path.sv ${RTL_ROOT}/uart_tx.sv ${RTL_ROOT}/uart_rx_path.sv ${RTL_ROOT}/uart_rx.sv ${RTL_ROOT}/bit_sync.sv ${RTL_ROOT}/sync_fifo.sv
+  VERILATOR_ARGS -Wall -Wno-fatal -DSIMULATION
+)
+
 # Module test executable
 add_executable(module_tests
   tests/test_main.cpp
@@ -110,6 +118,7 @@ add_executable(module_tests
   tests/module/uart_rx_test.cpp
   tests/module/uart_rx_path_test.cpp
   tests/module/uart_regs_test.cpp
+  tests/module/uart_top_test.cpp
 )
 
 target_link_libraries(module_tests
@@ -121,6 +130,7 @@ target_link_libraries(module_tests
   verilated_uart_rx
   verilated_uart_rx_path
   verilated_uart_regs
+  verilated_uart_top
   ${Boost_LIBRARIES}
 )
 
